--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,30 @@
 ul.list {
     margin-top:50px;
 }
+ul.list ul{
+    font-size: 70%;
+}
+section {
+    text-align: left;
+    font-size: 80% !important;
+}
+.align-center {
+    text-align: center !important;
+}
+section .sub-heading {
+    font-weight: bold;
+    margin-bottom: 0;
+    text-align: left;
+    line-height: 1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+}
+section .heading {
+    font-size: 80%;
+    font-weight: normal;
+    text-align: center;
+}
+.demo-img {
+    
+}
