--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,7 @@ section .heading {
     font-size: 80%;
     font-weight: normal;
     text-align: center;
+    opacity: 0.8;
 }
 .demo-img {
     
